--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -18,6 +18,13 @@
                 <input type="text" class="form-control" id="surname" name="surname" placeholder="Surname" required>
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="nickname">Nickname</label>
+            <input type="text" class="form-control" id="nickname" name="nickname" placeholder="Nickname" required>
+            <small class="form-text text-muted">This name will be visible to everyone.</small>
+        </div>
+
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="email">Email</label>
@@ -30,7 +37,9 @@
         </div>
 
         <!-- Error Message Display -->
-        <p th:if="${errorMessage}" th:text="${errorMessage}" class="text-danger"></p>
+        <p th:if="${emailError}" th:text="${emailError}" class="text-danger"></p>
+        <p th:if="${nickNameError}" th:text="${nickNameError}" class="text-danger"></p>
+        <p th:if="${unknownError}" th:text="${unknownError}" class="text-danger"></p>
 
         <button type="submit" class="btn btn-primary">Register</button>
         <a th:href="@{/}" class="btn btn-secondary ml-2">Back To Main Page</a>
