--- a/src/main/resources/templates/announcement-details.html
+++ b/src/main/resources/templates/announcement-details.html
@@ -23,12 +23,15 @@
                     <a class="dropdown-item" th:href="@{/add}">Add Announcement</a>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/users/list}">Users List</a>
+            </li>
             <li class="nav-item" th:if="${user.isAdmin()}">
                 <a class="nav-link" th:href="@{/admin}">Admin Panel</a>
             </li>
         </ul>
         <span class="navbar-text mr-3" th:if="${user.email != null}">
-            Logged in as: <a th:href="@{'/user/' + ${user.id}}" th:text="${user.name + ' ' + user.surname}"></a>
+            Logged in as: <a th:href="@{'/user/' + ${user.id}}" th:text="${user.nickname}"></a>
         </span>
         <a th:if="${user.email == null}" th:href="@{/login}" class="btn btn-outline-primary ml-2">Log in</a>
         <!-- Log out with confirmation modal trigger -->
@@ -73,7 +76,7 @@
         <p><strong>Creation Date:</strong> <span th:text="${#temporals.format(announcement.creationDate, 'dd.MM.yyyy HH:mm')}"></span></p>
         <p><strong>Author:</strong>
             <a th:href="@{'/user/' + ${announcement.user.id}}">
-                <span th:text="${announcement.user.name + ' ' + announcement.user.surname}"></span>
+                <span th:text="${announcement.user.nickname}"></span>
             </a>
         </p>
 
